# Desktop-Assistant-Gemma4

./: .gitignore  README.md  pyproject.toml  settings.json
benchmark/: dashboard.html
benchmarks/: 20260507_171417_test_001.json  20260507_180837_test_metrics.json  20260507_180837_test_retry.json  20260507_180837_test_vram.json  20260507_180842_test_001.json  20260507_180842_test_metrics.json  20260507_180842_test_retry.json  20260507_180842_test_vram.json  20260507_180846_test_001.json  20260507_180846_test_metrics.json  20260507_180846_test_retry.json  20260507_180846_test_vram.json  20260507_180857_test_001.json  20260507_180857_test_metrics.json  20260507_180857_test_retry.json  20260507_180857_test_vram.json  20260508_144653_test_001.json  20260508_144653_test_metrics.json  20260508_144653_test_retry.json  20260508_144653_test_vram.json  20260508_145210_test_001.json  20260508_145211_test_json.json  20260508_145211_test_metrics.json  20260508_145211_test_retry.json  20260508_145211_test_vram.json  20260508_145423_test_001.json  20260508_145423_test_json.json  20260508_145423_test_metrics.json  20260508_145423_test_retry.json  20260508_145423_test_vram.json  20260520_211058_test_001.json  20260520_211058_test_json.json  20260520_211058_test_metrics.json  20260520_211058_test_retry.json  20260520_211058_test_vram.json  20260520_211333_test_001.json  20260520_211333_test_metrics.json  20260520_211334_test_json.json  20260520_211334_test_retry.json  20260520_211334_test_vram.json  (+5 more)
docs/: PRD.docx  PRD.md
src/: __init__.py  main.py
src/core/: __init__.py  benchmark_logger.py  config.py  orchestrator.py  types.py
src/input/: __init__.py  stt.py
src/overlay/: __init__.py  state_machine.py
src/proactivity/: clipboard_watcher.py
src/prompts/: __init__.py  system_prompt.txt
src/tools/: __init__.py  cdp_tab_agent.py  file_tools.py  os_tools.py  vision_agent.py  zone_validator.py
src/utils/: __init__.py  logging.py  paths.py  timing.py
tests/: __init__.py  test_benchmark_logger.py  test_cdp_tab_agent.py  test_clipboard_watcher.py  test_file_tools.py  test_integration.py  test_orchestrator.py  test_os_tools.py  test_state_machine.py  test_stt.py  test_vision_agent.py  test_zone_validator.py
