[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-agent"
version = "0.1.0"
description = "AI assistant agent"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "faster-whisper",
    "nvidia-ml-py",
    "pyautogui",
    "pynput",
    "mss",
    "pillow",
    "playwright",
    "pyside6",
    "send2trash",
    "pydantic",
    "psutil"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "llama-cpp-cu121"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"
explicit = true