[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-agent"
version = "0.1.0"
description = "AI assistant agent"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "faster-whisper",
    "nvidia-ml-py",
    "pyautogui",
    "pynput",
    "sounddevice",
    "mss",
    "pillow",
    "playwright",
    "pyside6",
    "send2trash",
    "pydantic",
    "psutil",
    "llama-cpp-python==0.3.4"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "llama-cpp-cu121"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"
explicit = true

[tool.uv.sources]
llama-cpp-python = {index = "llama-cpp-cu121"}

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
