[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-agent"
version = "0.1.0"
description = "AI assistant agent"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "faster-whisper",
    "nvidia-ml-py",
    "pyautogui",
    "pynput",
    "sounddevice",
    "mss",
    "pillow",
    "playwright",
    "pyside6",
    "python-dotenv",
    "send2trash",
    "pydantic",
    "psutil",
    "pyperclip",
    "llama-cpp-python>=0.3.23",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
